# file_detection

./: CMakeLists.txt  convert_to_hex.cmake  file_detection.cpp  file_detection.h  vcpkg.json
